# Agentic_AI

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
agentic_ai/: __init__.py
agentic_ai/agents/: __init__.py  hierarchical.py  planning.py  rag.py  react.py
agentic_ai/api/: __init__.py  server.py
agentic_ai/core/: __init__.py  base_agent.py  base_embedding.py  base_llm.py  base_tool.py  base_vectorstore.py  memory.py  models.py
agentic_ai/embeddings/: __init__.py  claude_embedding.py  gemini_embedding.py  groq_embedding.py  openai_embedding.py
agentic_ai/llms/: __init__.py  claude_llm.py  gemini_llm.py  groq_llm.py  openai_llm.py
agentic_ai/mcp/: __init__.py  email_tool.py  file_tools.py  google_search.py  http_tool.py  web_scraper.py
agentic_ai/prompts/: __init__.py  templates.py
agentic_ai/rag/: __init__.py  chunking.py  evaluation.py  ingestion.py  output_parser.py  pipeline.py  retrieval.py
agentic_ai/utils/: __init__.py  config.py  logger.py  retry.py
agentic_ai/vectorstores/: __init__.py  chroma_store.py  faiss_store.py  pgvector_store.py  pinecone_store.py
examples/: agentic_rag_example.py  hierarchical_agent_example.py  planning_agent_example.py  quickstart.py  rag_pipeline_example.py  react_agent_example.py
